<no id>	add mail.mime.multipart.allowempty system property to handle (illegal)
	empty multiparts (see javax.mail.internet.MimeMultipart)
<no id>	add mail.mime.multipart.ignoreexistingboundaryparameter system property
	to allow parsing multiparts with incorrect boundary parameters
<no id>	add mail.mime.uudecode.ignoreerrors system property


		  CHANGES IN THE 1.4.1 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.1 release.

4107594	IMAP implementation should use the IDLE extension if available
4119871	MimeMessage.reply() should set the "References" header
6228377	IMAPFolder's setFlags method handles user flags incorrectly
6423701	Problem with using OrTerm when the protocol is IMAP
6431207	SMTP is adding extra CRLF to message content
6447295	IMAPMessage fails to return Content-Language from bodystructure
6447799	encoded text not decoded even when mail.mime.decodetext.strict is false
6447801	MimeBodyPart.writeTo reencodes data unnecessarily
6456422	NullPointerException in smtptransport when sending MimeMessages
	with no encoding
6456444	MimeMessages created from stream are not correctly handled
	with allow8bitmime
6478460	java.lang.ArrayIndexOutOfBoundsException: 0 >= 0 in MultipartReport
6506794	ProtocolException not correctly treated in IMAPStore
6517273	encoded parameters not decoded when using IMAP
6538483	JavaMail fails in Turkish locale
6569311	Deadlock in IMAP attachment handling
6604571	Folder.hasNewMessages hangs with some IMAP servers when folder is closed
<no id>	fix performance bug in base64 encoder; now even faster!
<no id>	throw MessageRemovedException from getContent for IMAP messages
<no id>	MimeUtility.decodeText should not discard trailing whitespace
<no id>	SSLSocketFactory should be used for imap and smtp STARTTLS commands
<no id>	added mail.<prot>.ssl.protocols and mail.<prot>.ssl.ciphersuites props
<no id>	fix bug in mapping IMAP UIDs to msgs when some msgs have been expunged